packages/tree_sitter_git_conventional_commit_subject/corpus/basic.txt
================================================================================
Subject with type and scope
================================================================================
feat(git): allow provided config object to extend other configs

--------------------------------------------------------------------------------

(source
  (type)
  (scope)
  (message))

================================================================================
Subject complete
================================================================================
feat(git)!: allow provided config object to extend other configs

--------------------------------------------------------------------------------

(source
  (type)
  (scope)
  (message))

================================================================================
Subject type and BC
================================================================================
feat!: allow provided config object to extend other configs

--------------------------------------------------------------------------------

(source
  (type)
  (message))

================================================================================
no message
================================================================================
feat(test):
--------------------------------------------------------------------------------

(source
  (type)
  (scope)
  (MISSING message))
